simplify package structure